--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,11 @@
 name = "map-visualizer-api"
 main = "server.js"
 compatibility_date = "2023-10-02"
-node_compat = true
+nodejs_compat = true
 
 [vars]
 # Environment variables will be set in the Cloudflare dashboard
 # or using wrangler secrets
 
 [site]
-bucket = "."
-entry-point = "." 
+bucket = "." 
